Fix bug #26531: get_elements_by_tag_name() wildcard fails